# oliepriser-scraper

./: Cargo.toml
src/: credentials.rs  main.rs  scraper.rs
