[package]
name = "oliepriser-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
click = "0.6.3"
futures = "0.3.30"
log = "0.4.22"
clap = { version = "4.5.18", features = ["derive"] }
